[package]
name = "snarkblock"
version = "0.1.0"
edition = "2021"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
license = "MIT/Apache-2.0"

[dependencies]
ark-bls12-381 = "0.3"
ark-crypto-primitives = "0.3"
ark-ec = "0.3"
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-ff = "0.3"
ark-groth16 = "0.3"
ark-r1cs-std = "0.3"
ark-relations = "0.3"
ark-serialize = { version = "0.3", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.3", default-features = false }
arkworks-gadgets = { git = "https://github.com/rozbb/arkworks-gadgets.git", branch = "pub-permute" }
blake2 = "0.9"
digest = "0.9"
hiciap = { git = "ssh://git@github.com/rozbb/hiciap.git" }

[features]
default = ["asm", "parallel"]
parallel = [
    "ark-groth16/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
]
asm = ["ark-ff/asm"]
